fixed dark mode request form

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1178,13 +1178,20 @@ input[type="range"]:active::-webkit-slider-thumb {
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
+.select2-dropdown:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
+}
+.select2-container--default .select2-selection--multiple:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
+}
 .select2-search {
   border-radius: 0.25rem;
   border-width: 0px;
 }
 .select2-results__group {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
   font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
@@ -1199,6 +1206,13 @@ input[type="range"]:active::-webkit-slider-thumb {
   --tw-text-opacity: 1;
   color: rgb(27 24 27 / var(--tw-text-opacity, 1));
 }
+
+
+.select2-container--default .select2-selection--single:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
+}
+
 .page-alert {
   display: flex;
   width: 100%;
@@ -1214,12 +1228,14 @@ input[type="range"]:active::-webkit-slider-thumb {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+
 .page-alert:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
+
 @media (min-width: 640px) {
 
   .page-alert {
@@ -2260,6 +2276,10 @@ input[type="range"]:active::-webkit-slider-thumb {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1));
+}
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
@@ -2848,9 +2868,9 @@ input[type="range"]:active::-webkit-slider-thumb {
 .group:hover .group-hover\:opacity-75 {
   opacity: 0.75;
 }
-.peer:checked ~ .peer-checked\:bg-red-600 {
+.peer:checked ~ .peer-checked\:bg-green-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(224 36 36 / var(--tw-bg-opacity, 1));
+  background-color: rgb(5 122 85 / var(--tw-bg-opacity, 1));
 }
 .peer:checked ~ .peer-checked\:after\:translate-x-full::after {
   content: var(--tw-content);
@@ -2871,9 +2891,9 @@ input[type="range"]:active::-webkit-slider-thumb {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.peer:focus ~ .peer-focus\:ring-blue-300 {
+.peer:focus ~ .peer-focus\:ring-gray-300 {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(164 202 254 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity, 1));
 }
 .data-\[twe-carousel-fade\]\:z-0[data-twe-carousel-fade] {
   z-index: 0;
@@ -3145,13 +3165,13 @@ input[type="range"]:active::-webkit-slider-thumb {
 .dark\:focus\:ring-offset-gray-700:focus:is(.dark *) {
   --tw-ring-offset-color: #374151;
 }
-.peer:checked ~ .dark\:peer-checked\:bg-red-600:is(.dark *) {
+.peer:checked ~ .dark\:peer-checked\:bg-green-600:is(.dark *) {
   --tw-bg-opacity: 1;
-  background-color: rgb(224 36 36 / var(--tw-bg-opacity, 1));
+  background-color: rgb(5 122 85 / var(--tw-bg-opacity, 1));
 }
-.peer:focus ~ .dark\:peer-focus\:ring-red-800:is(.dark *) {
+.peer:focus ~ .dark\:peer-focus\:ring-gray-700:is(.dark *) {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(155 28 28 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(55 65 81 / var(--tw-ring-opacity, 1));
 }
 @media (min-width: 640px) {
 
